# terrafrom-drift-detection

./: .env.example  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pr-checks.yml
config/: azure.template.yaml
docs/: architecture.md  backlog.md
scripts/: bootstrap.sh  lint.sh  run-scan.sh  test.sh  validate.sh
src/terraform_drift_detection/: api.py  cli.py  compat.py  config.py  diff.py  models.py  paths.py
src/terraform_drift_detection/ai/: client.py  service.py
src/terraform_drift_detection/application/: contracts.py  factory.py  service.py
src/terraform_drift_detection/diagnostics/: service.py
src/terraform_drift_detection/onboarding/: service.py
src/terraform_drift_detection/providers/azure/: activity_logs.py  normalizers.py  resource_graph.py  type_map.py
src/terraform_drift_detection/reporting/: executive.py  json_report.py  parse_report.py  text_report.py
src/terraform_drift_detection/state/: azure_blob_backend.py  terraform_state.py
tests/: test_ai_service.py  test_cli_run.py  test_config.py  test_diagnostics.py  test_diff.py  test_onboarding.py  test_reporting.py  test_resource_graph.py  test_terraform_state.py
tests/fixtures/: sample.tfstate.json
