[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-drift-detection"
version = "0.1.0"
description = "Azure-first Terraform drift detection scaffold"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "typing-extensions>=4.12.0; python_version<'3.11'",
]

[project.optional-dependencies]
azure = [
  "azure-identity>=1.17.1",
  "azure-storage-blob>=12.22.0",
  "azure-mgmt-resourcegraph>=8.0.0",
  "azure-mgmt-monitor>=6.0.2",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
terraform-drift = "terraform_drift_detection.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
